@@ -1,3 +1,12 @@
+2018-08-31  Joseph Myers  <joseph@codesourcery.com>
+
+	* conform/glibcconform.py: New file.
+	* conform/list-header-symbols.py: Likewise.
+	* conform/list-header-symbols.pl: Remove.
+	* conform/Makefile (tests-special): Only add linknamespace tests
+	if [PYTHON].
+	($(linknamespace-symlists-tests)): Use list-header-symbols.py.
+
 2018-08-31  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #23597]
